# python

./: README.md  pyproject.toml
1b/: app.py
1b/utils/: get_final_formatted_data.py  get_login.py  get_user_data_list.py
2b/: 2b_1.py
2s/: collect_config.py  localhost_config_20250711_214929.txt  notes.md
3b/: 3b_1.py  3b_2.py  3b_3.py
5b/: 5b_1.py  5b_2.py  5b_3.py
6b/6b_1/: csv_merge_log.py  data1.csv  data2.csv  log.txt
6b/6b_1/output/: 2025-07-09_20-05-08_merged_output.txt
demo_cost/: demo_const.py
p2/p2_3_string_demo/: string_demo.py
p2/p2_4.1_temp_converter/: app.py
p2/p2_4.2_bill_calculator/: app.py  constants.py  get_final_output.py  get_net_order_value.py  utils.py
p2/p2_general/: P2_2_numbers.py  p2_1_sum.py
p2/p2_lists/: p2_list_1_general.py  p2_list_2_sorting.py  p2_list_3_tuples.py  p2_list_4_dict.py  p2_list_5_nested_dict.py
p3/: p3_1.py  p3_2.py
p4/: p4_1.py  p4_2.py  p4_3.py  p4_4.py
p4f/p4f_1/: main.py
p4f/p4f_2/: main.py
p4f/p4f_3/: main.py
p4f/p4f_4/: main.py
p5/: p5_4_1.py
p6/: p6_1.py  p6_2.py
query/: main.py
t/: lucky_ticket.py
