[project]
name = "itmo-python-124-08"
version = "0.1.0"
description = "python course exercises"
authors = [
    {name = "timur-eit"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "names (>=0.3.0,<0.4.0)",
    "netmiko (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
